--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,69 @@ main > section > div > button > img {
 main > section > div > img {
     width: 100%;
 }
+
+.container-icons{
+    background-color: var(--branco-1000);
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-icons > p {
+    font-size: 18px;
+    color: #8b8b8b;
+    margin-top: 50px
+}
+
+.container-icons > h3 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 50px;
+}
+
+.container-icons > article {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    gap: 50px;
+}
+
+.container-icons > article > div {
+    width: 30%;
+    height: 100%;
+}
+
+.container-icons > article > div > img {
+    width: 100px;
+    height: auto;
+}
+
+.container-icons > article > div > p {
+    font-size: 16px;
+    color: #8b8b8b;
+    margin-top:20px;
+}
+
+.container-icons > article > div > p {
+    font-size: 16px;
+    color: #8b8b8b;
+    margin-top:20px;
+}
+
+.container-icons > article > div > button {
+    padding: 10px 30px;
+    border: 1px solid;
+    border-radius: 10px;
+    margin-top: 20px;
+    background-color: transparent;
+    font-size: 14px;
+    font-weight: 700;
+    transition: 0.3s ease-in-out;
+}
+
+.container-icons > article > div > button:hover {
+    transform: scale(1.03);
+}
